--- a/index.html
+++ b/index.html
@@ -1,1 +1,3 @@
-Welcome to my website my name is Gabriel
+Welcome to my website, my name is gabriel.
+This is going to be my canvas page for school for my softmore year.
+This is going to be my canvas page for my softmore year.
