--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
 Welcome to my website, my name is gabriel.
 This is going to be my canvas page for school for my softmore year. For my class I have to add the word Heron.
 Testing if it works.
+[link to index.md. Where all my other links are](index.md)
+
