--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <title>My Website</title>
-<script="js/init.js"></script>
+<script src="js/init.js"></script>
 </head>
 <body>
 Welcome to my website, my name is gabriel.
