--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@ Welcome to my website, my name is gabriel.
 This is going to be my canvas page for school for my softmore year. For my class I have to add the word Heron.
 Testing if it works.
 <a href="journal/">Click here to read my journal</a>
+<q>That's one small step for man, and one giant leap for mankind.</q><cite>Neil Armstrong</cite>
 </body>
 
 
