This is my Icon for my websitr

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 <title>My Website</title>
 <script src="js/init.js"></script>
+<link href="favicon.ico" rel="shortcut.icon" type="image/x-icon" /></link>
 </head>
 <body>
 Welcome to my website, my name is gabriel.
@@ -10,6 +11,7 @@ This is going to be my canvas page for school for my softmore year. For my class
 Testing if it works.
 <a href="journal/">Click here to read my journal</a>
 <q>That's one small step for man, and one giant leap for mankind.</q><cite>Neil Armstrong</cite>
+<img src="image/Dog Medium.png" alt="A picture">
 </body>
 
 
