Fixing link tag

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <title>My Website</title>
 <script src="js/init.js"></script>
-<link href="favicon.ico" rel="shortcut.icon" type="image/x-icon" /></link>
+<link href="favicon.ico" rel="shortcut.icon" type="image/x-icon" />
 </head>
 <body>
 Welcome to my website, my name is gabriel.
