--- a/index.html
+++ b/index.html
@@ -3,15 +3,14 @@
 <head>
 <title>My Website</title>
 <script src="js/init.js"></script>
-<link href="favicon.ico" rel="shortcut.icon" type="image/x-icon" />
+<link href="favicon.ico" rel="shortcut.icon" type="image/x-icon" >
 </head>
-<body>
+<body style="background-color:blue">
 Welcome to my website, my name is gabriel.
 This is going to be my canvas page for school for my softmore year. For my class I have to add the word Heron.
 Testing if it works.
 <a href="journal/">Click here to read my journal</a>
 <q>That's one small step for man, and one giant leap for mankind.</q><cite>Neil Armstrong</cite>
-<img src="image/Dog Medium.png" alt="A picture">
 </body>
 
 
