background (Not done yet.)

--- a/recipe/recipe1.html
+++ b/recipe/recipe1.html
@@ -10,7 +10,11 @@
 <a href="#InstructionHeader">Jump to Recipe</a>
 <h2>Background</h2>
 
-<p>
+<p>Flan is a popular dessert in Spain and Latin America. It's known in spanish as creme caramel due to its custard base topped with caramel. Flan has a long history, dating back all the way to ancient Rome. Eggs were made into custard to produce a sweet taste, because of it the Spaniards took it to america, where it quickly became a delicacy. 
+
+Flan came with many variations, the most popular one included eel flavored with spices like pepper, and honey, which was known as the only sweetner at the time. The Spanish love this dessert the most out of all of the countries, and when the Roman Empire fell, flan survived. 
+
+As of today 
 </p>
 
 <h2 id="InstructionHeader">Instructions</h2>
@@ -55,7 +59,14 @@
 <p>Melt sugar in a medium saucepan over medium-low heat until liquefied and golden in color. Carefully pour hot syrup into a deep 9-inch round glass baking dish, turning the dish to evenly coat the bottom then set aside.</p>
 
 <h3>Step 3</h3>
-<p>Crack and whisk ehhs in a lare bowl. Add condensed milk, evaporated milk, and vanilla extract. Whisk until smooth. Pour the egg mixture on top of caramel in the baking dish. Then place in a deep roasting pan. Carefully pour in enough hot water to come 1 inch up the sides of the dish.</p>
+<p>Crack and whisk eggs in a lare bowl. Add condensed milk, evaporated milk, and vanilla extract. Whisk until smooth. Pour the egg mixture on top of caramel in the baking dish. Then place in a deep roasting pan. Carefully pour in enough hot water to come 1 inch up the sides of the dish.</p>
+
+<h3>Step 4</h3>
+<p>Bake in the preheated oven until just set with a slight jiggle in the center,leave it for 1 hour, and checking after 55 minutes passed. Keep in mind the flan will continue to set as it cools. Remove from the oven and carefully transfer the baking to a wire rack. Let it cool in room temperature, then cover with plastic wrap to prevent a skin forming. Refrigirate for 3 hours or up to 3 days.</p>
+
+<h3>Step 5</h3>
+<p>To serve cut the flan into even slices (or not, you choose) and serve it in a plate.</p>
+<!--add a picture of flan here--> 
 </body>
 </html>
 
