--- a/recipe/recipe1.html
+++ b/recipe/recipe1.html
@@ -12,9 +12,7 @@
 
 <p>Flan is a popular dessert in Spain and Latin America. It's known in spanish as creme caramel due to its custard base topped with caramel. Flan has a long history, dating back all the way to ancient Rome. Eggs were made into custard to produce a sweet taste, because of it the Spaniards took it to america, where it quickly became a delicacy. 
 
-Flan came with many variations, the most popular one included eel flavored with spices like pepper, and honey, which was known as the only sweetner at the time. The Spanish love this dessert the most out of all of the countries, and when the Roman Empire fell, flan survived. 
-
-As of today 
+Flan came with many variations, the most popular one included eel flavored with spices like pepper, and honey, which was known as the only sweetner at the time. The Spanish love this dessert the most out of all of the countries, and when the Roman Empire fell, flan survived. And it evolved to the sweet delicacy that we know today.
 </p>
 
 <h2 id="InstructionHeader">Instructions</h2>
@@ -65,8 +63,9 @@ As of today
 <p>Bake in the preheated oven until just set with a slight jiggle in the center,leave it for 1 hour, and checking after 55 minutes passed. Keep in mind the flan will continue to set as it cools. Remove from the oven and carefully transfer the baking to a wire rack. Let it cool in room temperature, then cover with plastic wrap to prevent a skin forming. Refrigirate for 3 hours or up to 3 days.</p>
 
 <h3>Step 5</h3>
-<p>To serve cut the flan into even slices (or not, you choose) and serve it in a plate.</p>
+<p>To serve cut the flan into even slices, (or not, you choose) serve it in a plate, and enjoy!</p>
 <!--add a picture of flan here--> 
+<img src="https://www.simplyrecipes.com/thmb/yhUtjBiaGRwSN4MpRn_-HgDgtb0=/1500x0/filters:no_upscale():max_bytes(150000):strip_icc()/Simply-Recipes-Flan-LEAD-3-91932581d0a549b9b51421db0d93983a.jpg" alt="A picture of Flan cut nicely into a peice. With a peice of flan in a plate. There is towels underneath, the plates and spoons on an empty one." width="400" height="300">
 </body>
 </html>
 
