--- a/recipe/recipe2.html
+++ b/recipe/recipe2.html
@@ -3,7 +3,6 @@
 <head>
 <title> My Favorite Recipes</title>
 <script src="../js/init.js"></script>
-<table>
 </head>
 <body>
 <h1>Brazillian Pizza</h1>
@@ -31,6 +30,8 @@ Pizza arrived in Brazil through Italian immigrants who came to Brazil between 18
 </ul>
 <h2 id="InstructionHeader">Instructions</h2>
 <!-- Add tips here -->
+<table>
+<caption>Ingredients for Brazillian Pizza</caption>
 <thead>
 <!-- Find a way to add a caption here -->
 <tr>
