--- a/recipe/recipe1.html
+++ b/recipe/recipe1.html
@@ -3,7 +3,6 @@
 <head>
 <title> My Favorite Recipes</title>
 <script src="../js/init.js"></script>
-<table>
 </head>
 <body>
 <h1>Flan</h1>
@@ -35,6 +34,8 @@ Flan came with many variations, the most popular one included eel flavored with 
 	<p>  </p>
 <h2 id="InstructionHeader">Instructions</h2>
 <!--add a table here-->
+<table>
+<caption>Ingredients for Flan</caption>
 <thead>
 <tr>
 <th style="border:1px solid" colspan=1>Amount</th>
