--- a/recipe/recipe1.html
+++ b/recipe/recipe1.html
@@ -30,8 +30,10 @@ Flan came with many variations, the most popular one included eel flavored with 
 <p>If you don't want your flan sticking to your pan then you should put 2 tablespoons of warm tap water, as it will help it thin the caramal, so it doesn't stick to the pan after the flan bakes.</p>
 </li>
 </ul>
-
-	<p>  </p>
+<strong>Prep Time</strong>
+	<p>This recipe has 30 minutes of prep time, 50 minutes of cook time, and it takes a total time of 80 minutes to finish.</p> 
+<strong>Servings</strong>
+<p>This recipe has 10 servings.</p>
 <h2 id="InstructionHeader">Instructions</h2>
 <!--add a table here-->
 <table>
