--- a/recipe/recipe2.html
+++ b/recipe/recipe2.html
@@ -28,6 +28,10 @@ Pizza arrived in Brazil through Italian immigrants who came to Brazil between 18
 <p> Some ingredients that can make your homemade pizza more flavorful are olive oil, and flour. So if you want to make your pizza more flavorful use one of those.</p>
 </li>
 </ul>
+<strong>Prep Time</strong>
+<p>The prep time takes about 5 minutes. The cooktime takes approximately 10 minutes. The total time is about 15 minutes.</p>
+<strong>Servings</strong>
+<p>There is about 8 servings in this recipe</p>
 <h2 id="InstructionHeader">Instructions</h2>
 <!-- Add tips here -->
 <table>
