--- a/recipe/recipe1.html
+++ b/recipe/recipe1.html
@@ -87,6 +87,17 @@ Flan came with many variations, the most popular one included eel flavored with 
 <p>To serve cut the flan into even slices, (or not, you choose) serve it in a plate, and enjoy!</p>
 <!--add a picture of flan here--> 
 <img src="https://www.simplyrecipes.com/thmb/yhUtjBiaGRwSN4MpRn_-HgDgtb0=/1500x0/filters:no_upscale():max_bytes(150000):strip_icc()/Simply-Recipes-Flan-LEAD-3-91932581d0a549b9b51421db0d93983a.jpg" alt="A picture of Flan cut nicely into a peice. With a peice of flan in a plate. There is towels underneath, the plates and spoons on an empty one." width="400" height="300">
+<p> </p>
+<h3>External Links</h3>
+<strong>these are the links for the flan's pictures website.</strong>
+<p> </p>
+<ul>
+<li>
+<cite>https://www.google.com/url?sa=i&url=https%3A%2F%2Famiablefoods.com%2Fleche-flan%2F&psig=AOvVaw2qMZqM7MIgQ5NJCd6sTMHD&ust=1732736541255000&source=images&cd=vfe&opi=89978449&ved=0CBcQjhxqFwoTCNCN1__g-okDFQAAAAAdAAAAABAJ </cite>
+</li>
+<li>
+<p> </p>
+<cite>https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.simplyrecipes.com%2Fflan-recipe-8418594&psig=AOvVaw2qMZqM7MIgQ5NJCd6sTMHD&ust=1732736541255000&source=images&cd=vfe&opi=89978449&ved=0CBcQjhxqFwoTCNCN1__g-okDFQAAAAAdAAAAABAR </cite>
 </body>
 </html>
 
