finally done again

--- a/recipe/recipe2.html
+++ b/recipe/recipe2.html
@@ -89,6 +89,16 @@ Pizza arrived in Brazil through Italian immigrants who came to Brazil between 18
 <strong>Step 5</strong>
 <p>Take out of the oven and slice into even pieces,(or not, you choose) and enjoy your new homemade Brazillian Pizza!</p>
 <img src="https://cdn.vox-cdn.com/thumbor/WKATdT2ZivU6X4VZe9Jvq3ZAPSk=/1400x788/filters:format(jpeg)/cdn.vox-cdn.com/uploads/chorus_asset/file/23419688/PB_Portuguesa_BGarrot_WEB.jpg" alt="There is a pizza toppeed with eggs, onions, and tomatoes the pizza's curst is thin and the pizza is seated on a table." width="450" height="400">
+<p> </p>
+<h3>External Links</h3>
+<strong>These are the links for the pizza's</strong>
+<ul>
+<li>
+<cite>https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.mysuburbankitchen.com%2Fbrazilian-pizza%2F&psig=AOvVaw3LZk_0RHjJoCs8DXy97725&ust=1732737072181000&source=images&cd=vfe&opi=89978449&ved=0CBcQjhxqFwoTCKigq-Li-okDFQAAAAAdAAAAABAJ</cite>
+</li>
+<li>
+<p> </p>
+<cite>https://www.google.com/url?sa=i&url=https%3A%2F%2Fatlanta.eater.com%2F2022%2F4%2F27%2F23043353%2Fatlanta-brasiliana-pizza-serves-traditional-brazilian-pizza&psig=AOvVaw3LZk_0RHjJoCs8DXy97725&ust=1732737072181000&source=images&cd=vfe&opi=89978449&ved=0CBcQjhxqFwoTCKigq-Li-okDFQAAAAAdAAAAABAQ </cite>
 </body>
 </html>
 
