finally done for a third time

--- a/recipe/recipe_home.html
+++ b/recipe/recipe_home.html
@@ -22,7 +22,16 @@ height="350">
 <p>Brazillian Pizza is one of the most popular foods in Brazil, and for good reason, its absolutely delicous. On occasion, usually when family came over we would either order or go to a restaraunt to eat Brazillian pizza. It was very good and something that I miss since moving to the US, as the pizza here is so much worse. When we take vacations to Brazil over the summer one of the things that i'mand my family is most excited for is actually eating the pizza. <q>When I was a kid my family would eat pizza every Sunday for dinner.</q><cite>Rafael(Dad) </cite> </p>
 <img src="https://www.177milkstreet.com/assets/site/Recipes/Brazilian-Portuguese-Pizza.jpg" alt="It is a pizza with 8 slices sliced equally. The toppings are eggs with cheese and bacon. The pizza is circular and is sitting on what looks like to be a marbled table." width="300" Height="350">
 
-
+<p>  <p/>
+<h3>External links</h3>
+<strong>I got the flan picture from this website.</strong>
+<p> </p>
+<cite>https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.acozykitchen.com%2Fclassic-flan&psig=AOvVaw2qMZqM7MIgQ5NJCd6sTMHD&ust=1732736541255000&source=images&cd=vfe&opi=89978449&ved=0CBcQjhxqFwoTCNCN1__g-okDFQAAAAAdAAAAABAE</cite> 
+<p> </p>
+<strong>I got the brazillian pizza picture from this website</strong>
+<p> </p>
+<cite>https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.177milkstreet.com%2Frecipes%2Fbrazilian-style-portuguese-pizza%3Ftoken%3D444&psig=AOvVaw3LZk_0RHjJoCs8DXy97725&ust=1732737072181000&source=images&cd=vfe&opi=89978449&ved=0CBcQjhxqFwoTCKigq-Li-okDFQAAAAAdAAAAABAE</cite>
 </body>
+
 </html>
 
