--- a/zoo/index.html
+++ b/zoo/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Zoo Overview</title>
     <script src="../js/init.js"></script>
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
     <header>
@@ -63,5 +64,6 @@
 <td style="border:1px solid"> 8:00 AM - 10:00 PM</td>
 <td style="border:1px solid">450$</td>
 </tbody>
+</table>
 
 </html>
