--- a/project/index.html
+++ b/project/index.html
@@ -3,7 +3,7 @@
 <head>>
 <title>My Website</title>
 <script src="..js/init.js"></script>
-<link href="style.css"A rel="stylesheet">
+<link href="style.css" rel="stylesheet">
 </head>
 <body id="css">
 <a href="journal/">Click here to read my journal</a>
