--- a/project/grid.html
+++ b/project/grid.html
@@ -1,1 +1,13 @@
-wdhnw
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<title>2cnd page of my website</title>
+<script src="..js/init.js"></script>
+<link href="gridstyle.css" rel="stylesheet">
+</head>
+<body>
+
+</body>
+
+
+</html>
