Hopefully this works

--- a/project/index.html
+++ b/project/index.html
@@ -6,9 +6,11 @@
 <link href="style.css" rel="stylesheet">
 </head>
 <body id="css">
-<a href="journal/">Click here to read my journal</a>
+<a href="journal">Click here to read my journal</a>
 <p> </p>
-<a href="grid/">Click here to go to the second page</a>
+<a href="grid.html">Click here to go to the second page</a>
+<p> </p>
+<a href="file:///Users/1033053/Desktop/culinary-website/about-us.html">Click here to go to my culinary website project</a>
 <h1>About me</h1>
 <p id="text-2">Welcome to my website, my name is Gabriel. I have one sister, a mom, dad, and a dog. I'm from Brazil. I moved here when I was 6 or 7 years old. I have family, and most of them live in Brazil, we visit them every summer. </p>
 <!-- add a picture of my dog -->
