--- a/Java/Game/game.html
+++ b/Java/Game/game.html
@@ -1,9 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>Game</title>
+<title>Animation</title>
+<style>
+canvas{
+border:1px solid;
+}
+</style>
 </head>
 <body>
-<h1>Game</h1>
+<canvas id="myCanvas"
+width="400"
+height="400">
+</canvas>
+<script src="game.js">
+</script>
 </body>
 </html>
