--- a/Java/Game/game.html
+++ b/Java/Game/game.html
@@ -1,19 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-<title>Animation</title>
-<style>
-canvas{
-border:1px solid;
-}
-</style>
-</head>
-<body>
-<canvas id="myCanvas"
-width="400"
-height="400">
-</canvas>
-<script src="game.js">
-</script>
-</body>
+    <head>
+        <title>Animation</title>
+<link rel="stylesheet" href="game.css">
+        <style>
+            canvas{
+                border:1px solid;
+            }
+        </style>
+    </head>
+    <body>
+        <canvas id="myCanvas"
+                width="400"
+                height="400">
+        </canvas>
+        <script src="animation_final.js">
+        </script>
+    </body>
 </html>
