--- a/Java/Game/game2.html
+++ b/Java/Game/game2.html
@@ -14,7 +14,7 @@
                 width="1430"
                 height="700">
         </canvas>
-        <script src="animation_final.js">
+        <script src="2l.js">
         </script>
     </body>
 </html>
